--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -8,14 +8,16 @@
     "build": "rescript build; export NODE_ENV=production; webpack --mode production"
   },
   "dependencies": {
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "react": "^18.0.15",
+    "react-dom": "^18.0.6",
     "@waw/player": "^0.1.0",
     "@waw/svg": "^0.1.0",
     "@waw/synth": "^0.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6"
   },
   "author": "",
   "license": "ISC"
