--- a/packages/svg/package.json
+++ b/packages/svg/package.json
@@ -2,13 +2,16 @@
   "name": "@waw/svg",
   "version": "0.1.0",
   "description": "waw svg tools",
-  "main": "dist/index.js",
+  "author": "David Nalchevanidze",
+  "license": "MIT",
+  "main": "./dist/main.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "test": "jest",
     "clean": "rm -rf ./dist .tsbuildinfo"
   },
-  "author": "David Nalchevanidze",
-  "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@types/react": "^18.0.15",
