--- a/packages/svg/package.json
+++ b/packages/svg/package.json
@@ -8,6 +8,13 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nalchevanidze/waw.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nalchevanidze/waw/issues"
+  },
   "scripts": {
     "test": "jest",
     "clean": "rm -rf ./dist .tsbuildinfo"
@@ -21,5 +28,8 @@
   },
   "peerDependencies": {
     "react": ">= 17.0.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
