--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@waw/player",
+  "name": "@wdaw/player",
   "version": "0.1.0",
   "description": "react audio visualizer",
   "main": "dist/index.js",
@@ -13,7 +13,7 @@
     "typescript": "^5.0.4"
   },
   "peerDependencies": {
-    "@waw/svg": "0.1.0",
+    "@wdaw/svg": "0.1.0",
     "react": ">= 17.0.2"
   }
 }
