--- a/packages/svg/package.json
+++ b/packages/svg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@waw/svg",
+  "name": "@wdaw/svg",
   "version": "0.1.0",
   "description": "svg tools for web audio workstation",
   "author": "David Nalchevanidze",
