--- a/packages/synth/package.json
+++ b/packages/synth/package.json
@@ -2,9 +2,22 @@
   "name": "@wdaw/synth",
   "version": "0.1.0",
   "description": "Synthesizer / Keyboards",
-  "main": "dist/index.js",
-  "author": "Davit  Nalchevanidze",
+  "author": "David Nalchevanidze",
   "license": "MIT",
+  "main": "dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "sideEffects": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nalchevanidze/wdaw.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nalchevanidze/wdaw/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "jest",
     "clean": "rm -rf ./dist .tsbuildinfo"
