--- a/packages/svg/package.json
+++ b/packages/svg/package.json
@@ -4,7 +4,7 @@
   "description": "svg tools for web audio workstation",
   "author": "David Nalchevanidze",
   "license": "MIT",
-  "main": "./dist/main.cjs",
+  "main": "dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
@@ -14,6 +14,9 @@
   },
   "bugs": {
     "url": "https://github.com/nalchevanidze/wdaw/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "test": "jest",
@@ -28,8 +31,5 @@
   },
   "peerDependencies": {
     "react": ">= 17.0.2"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
