--- a/packages/player/tsconfig.json
+++ b/packages/player/tsconfig.json
@@ -3,8 +3,7 @@
   "exclude": ["node_modules", "./dist"],
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "./dist",
-    "tsBuildInfoFile": ".tsbuildinfo"
+    "outDir": "./dist"
   },
   "references": [
     {
