--- a/packages/svg/tsconfig.json
+++ b/packages/svg/tsconfig.json
@@ -3,7 +3,6 @@
   "exclude": ["node_modules", "./dist"],
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "./dist",
-    "tsBuildInfoFile": ".tsbuildinfo"
+    "outDir": "./dist"
   }
 }
