--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -18,9 +18,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "scripts": {
-    "clean": "rm -rf ./dist .tsbuildinfo"
-  },
+  "scripts": {},
   "devDependencies": {
     "@types/react": "^18.0.15",
     "typescript": "^5.0.4"
