--- a/packages/svg/package.json
+++ b/packages/svg/package.json
@@ -19,8 +19,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "jest",
-    "clean": "rm -rf ./dist .tsbuildinfo"
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
