--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "test": "jest",
     "clean": "rm -rf ./packages/*/.tsbuildinfo ./packages/*/dist ./packages/*/node_modules",
     "build": "tsc -b",
-    "publish": "lerna publish --no-private"
+    "publish": "lerna publish --no-private",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
     "concurrently": "^8.0.1",
+    "eslint": "^8.44.0",
+    "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
+    "prettier": "^3.0.0",
     "swc-loader": "^0.2.3",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
