--- a/packages/svg/package.json
+++ b/packages/svg/package.json
@@ -4,6 +4,7 @@
   "description": "svg tools for web audio workstation",
   "author": "David Nalchevanidze",
   "license": "MIT",
+  "main": "./dist/index.js",
   "exports": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
