--- a/packages/synth/package.json
+++ b/packages/synth/package.json
@@ -4,7 +4,8 @@
   "description": "Synthesizer / Keyboards",
   "author": "David Nalchevanidze",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "exports": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
