--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -5,7 +5,9 @@
   "author": "David Nalchevanidze",
   "license": "MIT",
   "main": "./dist/index.js",
-  "exports": "./dist/index.js",
+  "exports": {
+    "default": "./dist/index.js"
+  },
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
