--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "clean": "rm -rf ./packages/*/tsconfig.tsbuildinfo ./packages/*/dist ./packages/*/node_modules",
     "build": "tsc -b",
-    "publish": "lerna publish --no-private",
+    "publish": "npm run clean && npm run build && lerna publish --no-private",
     "lint": "eslint .",
     "format": "prettier . --write"
   },
