--- a/packages/player/package.json
+++ b/packages/player/package.json
@@ -12,6 +12,10 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "sideEffects": false,
+  "files": [
+    "src",
+    "dist"
+  ],
   "engines": {
     "node": ">=16.0.0"
   },
