--- a/packages/svg/package.json
+++ b/packages/svg/package.json
@@ -10,6 +10,10 @@
   "types": "./dist/index.d.ts",
   "type": "module",
   "sideEffects": false,
+  "files": [
+    "src",
+    "dist"
+  ],
   "engines": {
     "node": ">=16.0.0"
   },
