--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "build": "tsc -b",
     "publish": "npm run build && lerna publish --no-private",
     "lint": "eslint .",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "check:spelling": "npx cspell --gitignore --no-progress --color **/*.{ts,tsx,md}",
+    "check:formating": "prettier . --check"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "concurrently": "^8.0.1",
+    "cspell": "^6.31.1",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
