--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
+    "jest-html-reporter": "^3.10.1",
     "prettier": "^3.0.0",
     "swc-loader": "^0.2.3",
     "ts-jest": "^29.1.1",
