--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^8.0.1",
     "cspell": "^6.31.1",
     "eslint": "^8.44.0",
+    "eslint-plugin-deprecation": "^1.4.1",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
