--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "react": "^18.0.15",
     "react-dom": "^18.0.6",
-    "@wdaw/player": "^0.1.0",
-    "@wdaw/svg": "^0.1.0",
-    "@wdaw/synth": "^0.1.0"
+    "@wdaw/player": "../packages/player",
+    "@wdaw/svg": "../packages/svg",
+    "@wdaw/synth": "../packages/synth"
   },
   "devDependencies": {
     "typescript": "^5.0.4",
