--- a/docs/package.json
+++ b/docs/package.json
@@ -8,12 +8,12 @@
       "build": "next build && next export && touch out/.nojekyll"
     },
     "dependencies": {
-      "@mdx-js/loader": "^2.1.1",
-      "@next/mdx": "^12.1.4",
       "next": "12.1.4",
       "react": "18.0.0",
       "react-dom": "18.0.0",
-      "remark-prism": "^1.3.6"
+      "@wdaw/player": "../packages/player",
+      "@wdaw/svg": "../packages/svg",
+      "@wdaw/synth": "../packages/synth"
     },
     "devDependencies": {
       "@types/react": "18.0.1",
