--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "examples/*"
   ],
   "scripts": {
+    "dev": "npm run dev -w=@wdaw/docs",
     "start": "concurrently --kill-others 'tsc -b -w' 'webpack serve'",
     "test": "jest",
     "clean": "rm -rf ./packages/*/tsconfig.tsbuildinfo ./packages/*/dist ./packages/*/node_modules",
