--- a/examples/docs/package.json
+++ b/examples/docs/package.json
@@ -11,7 +11,7 @@
     "next": "15.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "@wdaw/synth": "../../packages/synth"
+    "@wdaw/synth": "0.2.1"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
