--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "npm run dev -w=@wdaw/docs",
     "start": "concurrently --kill-others 'tsc -b -w' 'webpack serve'",
     "test": "jest",
-    "clean": "rm -rf ./packages/*/tsconfig.tsbuildinfo ./packages/*/dist ./packages/*/node_modules",
+    "clean": "rm -rf ./packages/*/tsconfig.tsbuildinfo ./packages/*/dist ./packages/*/node_modules ./examples/*/dist ./examples/*/node_modules ./node_modules",
     "build": "tsc -b",
     "publish": "npm run build && lerna publish --no-private",
     "lint": "eslint .",
