--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@wdaw/synth",
+  "name": "@wdaw/engine",
   "version": "0.2.1",
-  "description": "Synthesizer / Keyboards",
+  "description": "Synthesizer",
   "author": "David Nalchevanidze",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -32,14 +32,8 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
-    "@types/react": "^19.0.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
-  },
-  "peerDependencies": {
-    "@wdaw/svg": "^0.2.0",
-    "@wdaw/engine": "^0.2.0",
-    "react": ">= 19.0.0"
   }
 }
