--- a/examples/demo/tsconfig.json
+++ b/examples/demo/tsconfig.json
@@ -9,7 +9,7 @@
       "path": "../../packages/svg"
     },
     {
-      "path": "../../packages/synth"
+      "path": "../../packages/ui"
     },
     {
       "path": "../../packages/player"
