--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wdaw/synth",
+  "name": "@wdaw/ui",
   "version": "0.2.1",
   "description": "Synthesizer / Keyboards",
   "author": "David Nalchevanidze",
