--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^19.0.0",
     "@wdaw/player": "../packages/player",
     "@wdaw/svg": "../packages/svg",
-    "@wdaw/synth": "../packages/synth"
+    "@wdaw/ui": "../packages/ui"
   },
   "devDependencies": {
     "typescript": "^5.7.3",
