--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "examples/*"
   ],
   "scripts": {
-    "dev": "concurrently --kill-others 'tsc -b -w' 'npm run dev -w=@wdaw/docs' ",
-    "start": "concurrently --kill-others 'tsc -b -w' 'webpack serve'",
+    "start": "concurrently --kill-others 'tsc -b -w' 'npm run dev -w=@wdaw/docs' ",
     "test": "jest",
     "clean": "rm -rf ./packages/*/tsconfig.tsbuildinfo ./packages/*/dist ./packages/*/node_modules ./examples/*/dist ./examples/*/node_modules ./node_modules",
     "build": "tsc -b",
@@ -29,11 +28,8 @@
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "swc-loader": "^0.2.6",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.3",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "lerna": "^7.1.1"
