--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
 
-
 jobs:
   pages:
     runs-on: ubuntu-latest
@@ -13,12 +12,16 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: "20"
+          node-version: '20'
       - name: Generate
         run: |
           npm i
           npm run build
           npm run next
+      - name: Git Config
+        run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email ${{ github.actor }}@users.noreply.github.com"
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
