--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Git Config
         run: |
           git config --global user.name "${{ github.actor }}"
-          git config --global user.email ${{ github.actor }}@users.noreply.github.com"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
