--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -20,9 +20,9 @@ jobs:
       - name: Git Config
         run: |
           git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.email "${{ github.actor }}@gmal.com"
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./examples/docs/out
