--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '20'
-      - name: Build
+      - name: Build Pages
         run: |
           npm i
           npm run build
