--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '20'
-      - name: Build Pages
+      - name: Build
         run: |
           npm i
           npm run build
@@ -20,7 +20,7 @@ jobs:
       - name: Git Config
         run: |
           git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@gmal.com"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
