--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "prettier . --write",
     "check:spelling": "npx cspell --gitignore --no-progress --color **/*.{ts,tsx,md}",
     "check:formating": "prettier . --check",
-    "next": "npm run build -w=@wdaw/docs"
+    "docs": "npm run build -w=@wdaw/docs"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
