--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -23,4 +23,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./examples/docs/out
+          publish_dir: ./packages/docs/out
